--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="bg-dark">
     <header class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills">
-            <li class="nav-item"><a [routerLink]="['/home']" class="nav-link active" aria-current="page">Home</a></li>
-            <li class="nav-item"><a [routerLink]="['/findPokemon']" class="nav-link text-white">Find Pokemon</a></li>
-            <li class="nav-item"><a [routerLink]="['/pokedex']" class="nav-link text-white">Pokedex</a></li>
+            <li class="nav-item"><a [routerLink]="['/home']" class="nav-link" routerLinkActive="router-link-active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a [routerLink]="['/findPokemon']" class="nav-link" routerLinkActive="router-link-active">Find Pokemon</a></li>
+            <li class="nav-item"><a [routerLink]="['/pokedex']" class="nav-link" routerLinkActive="router-link-active">Pokedex</a></li>
         </ul>
     </header>
 </div>
