--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .bug {
     background: #a8ff78;
     background: -webkit-linear-gradient(to right, #78ffd6, #a8ff78);
